// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> render with default/required props 1`] = `
<DocumentFragment>
  <button
    class="button "
  >
    props.label
  </button>
</DocumentFragment>
`;

exports[`<Button/> render with optional/required props 1`] = `
<DocumentFragment>
  <button
    class="button optProps.className"
    data-cy="optProps.data-cy"
  >
    props.label
  </button>
</DocumentFragment>
`;
